--- a/composer.json
+++ b/composer.json
@@ -1,45 +1,62 @@
 {
-  "name": "omnilight/yii2-scheduling",
-  "description": "Scheduling extension for Yii2 framework",
-  "keywords": [
-    "yii",
-    "scheduling",
-    "cron"
-  ],
-  "minimum-stability": "dev",
-  "authors": [
-    {
-      "name": "Pavel Agalecky",
-      "email": "pavel.agalecky@gmail.com"
-    }
-  ],
-  "type": "yii2-extension",
-  "require": {
-    "php": ">=5.4.0",
-    "yiisoft/yii2": "2.0.*",
-    "symfony/process": "2.6.* || 3.* || 4.*",
-    "dragonmantank/cron-expression": "1.*"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "4.8.36"
-  },
-  "suggest": {
-    "guzzlehttp/guzzle": "Required to use the thenPing method on schedules (~5.0)."
-  },
-  "autoload": {
-    "psr-4": {
-      "omnilight\\scheduling\\": "src"
-    }
-  },
-  "extra": {
-    "bootstrap": "omnilight\\scheduling\\Bootstrap"
-  },
-  "scripts": {
-    "test": "vendor/bin/phpunit"
-  },
-  "config": {
-    "allow-plugins": {
-      "yiisoft/yii2-composer": true
-    }
-  }
+    "name": "omnilight/yii2-scheduling",
+    "description": "Scheduling extension for Yii2 framework",
+    "type": "yii2-extension",
+    "keywords": [
+        "yii",
+        "scheduling",
+        "cron"
+    ],
+    "authors": [
+        {
+            "name": "Pavel Agalecky",
+            "email": "pavel.agalecky@gmail.com"
+        },
+        {
+            "name": "Yanis Ballestero",
+            "email": "yjballestero@gmail.com",
+            "role": "Developer",
+            "homepage": "https://yjballestero.com"
+        }
+    ],
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "require": {
+        "php": ">=8.1",
+        "dragonmantank/cron-expression": "~3.0",
+        "guzzlehttp/guzzle": "~6.0",
+        "symfony/process": "^2.6 || ^3.0 || ^4.0 || ~5.0",
+        "yiisoft/yii2": ">=2.0.50"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~9.5.0",
+        "roave/security-advisories": "dev-latest"
+    },
+    "suggest": {
+        "guzzlehttp/guzzle": "Required to use the thenPing method on schedules (~6.0)."
+    },
+    "autoload": {
+        "psr-4": {
+            "omnilight\\scheduling\\": "src"
+        }
+    },
+    "extra": {
+        "bootstrap": "omnilight\\scheduling\\Bootstrap"
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
+    },
+    "config": {
+        "optimize-autoloader": true,
+        "sort-packages": true,
+        "allow-plugins": {
+            "yiisoft/yii2-composer": true
+        }
+    },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
+        }
+    ]
 }
